Add background image to make the page pop more.

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  background-image: url(tacos.jpg);
+  background-size: cover;
 }
 
 .card-container {
