--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body {
 .card-container {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   margin: 3rem;
   gap: 2rem;
   height: 100vh;
