--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 body {
@@ -23,7 +26,10 @@ body {
 h1 {
   margin: 2rem auto;
   text-align: center;
-  color: whitesmoke;
+  color: white;
+  font-size: 48px;
+
+  text-shadow: 2px 3px 4px black;
 }
 
 .card {
