Add clip-path to create a halft circle which acts as the taco shell.

--- a/styles.css
+++ b/styles.css
@@ -100,5 +100,7 @@ h1 {
   height: 53%;
   background: rgb(184, 128, 26);
   border: 6px solid goldenrod;
-  border-radius: 50%;
+  border-radius: 100% 100% 0 0;
+
+  clip-path: ellipse(50% 100% at 50% 100%);
 }
