--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
   font-family: "Inter", sans-serif;
 }
 
+:root {
+  --brown: rgb(71, 43, 11);
+  --dark-brown: rgb(49, 30, 7);
+}
+
 body {
   /* background-color: rgba(0, 0, 0, 0.8); */
   background-image: url(tacos.jpg);
@@ -101,6 +106,27 @@ h1 {
   background: rgb(184, 128, 26);
   border: 6px solid goldenrod;
   border-radius: 100% 100% 0 0;
-
   clip-path: ellipse(50% 100% at 50% 100%);
+}
+
+.bread-behind-copy {
+  position: absolute;
+  top: 40%;
+  left: 10%;
+  width: 78%;
+  height: 53%;
+  background: rgb(184, 128, 26);
+  border: 6px solid goldenrod;
+  border-radius: 100% 100% 0 0;
+  clip-path: ellipse(50% 100% at 50% 100%);
+}
+
+.meat-1 {
+  position: absolute;
+  top: 4%;
+  left: -1%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--brown);
+  border: 8px solid var(--dark-brown);
 }
