--- a/styles.css
+++ b/styles.css
@@ -123,10 +123,11 @@ h1 {
 
 .meat-1 {
   position: absolute;
-  top: 4%;
-  left: -1%;
-  width: 100%;
-  height: 100%;
+  top: 40%;
+  left: 72%;
+  width: 17%;
+  height: 9%;
   background-color: var(--brown);
   border: 8px solid var(--dark-brown);
+  border-radius: 47%;
 }
