--- a/styles.css
+++ b/styles.css
@@ -79,55 +79,25 @@ h1 {
 }
 
 /* ----------- TACO ANIMATION SECTION ---------- */
-.box {
+.animation-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 4rem;
+}
+
+.taco {
   position: relative;
-  margin: auto;
-  display: block;
-  margin-top: -2%;
-  width: 600px;
-  height: 420px;
-  background: none;
+  width: 260px;
+  height: 180px;
+  filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.4));
 }
 
 .plate {
+  background: #e5e5e5;
+  height: 40px;
+  width: 280px;
   position: absolute;
-  left: 13%;
-  width: 75%;
-  height: 87%;
-  background: whitesmoke;
-  border-radius: 50%;
-}
-
-.bread-behind {
-  position: absolute;
-  left: 9%;
-  width: 78%;
-  height: 53%;
-  background: rgb(184, 128, 26);
-  border: 6px solid goldenrod;
-  border-radius: 100% 100% 0 0;
-  clip-path: ellipse(50% 100% at 50% 100%);
-}
-
-.bread-behind-copy {
-  position: absolute;
-  top: 40%;
-  left: 10%;
-  width: 78%;
-  height: 53%;
-  background: rgb(184, 128, 26);
-  border: 6px solid goldenrod;
-  border-radius: 100% 100% 0 0;
-  clip-path: ellipse(50% 100% at 50% 100%);
-}
-
-.meat-1 {
-  position: absolute;
-  top: 40%;
-  left: 72%;
-  width: 17%;
-  height: 9%;
-  background-color: var(--brown);
-  border: 8px solid var(--dark-brown);
-  border-radius: 47%;
+  bottom: 0;
+  left: -10px;
+  box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.2);
 }
