--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,17 @@ h1 {
 
 .plate {
   background: #e5e5e5;
-  height: 40px;
   width: 280px;
+  height: 40px;
   position: absolute;
   bottom: 0;
   left: -10px;
   box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.shell {
+  width: 240px;
+  height: 130px;
+  background: linear-gradient(#f7d276, #e5b54f);
+  border-radius: 140px 140px 20px 20px;
 }
