--- a/styles.css
+++ b/styles.css
@@ -107,4 +107,8 @@ h1 {
   height: 130px;
   background: linear-gradient(#f7d276, #e5b54f);
   border-radius: 140px 140px 20px 20px;
+  position: absolute;
+  bottom: 20px;
+  left: 10px;
+  box-shadow: inset 0 -20px 25px rgba(0, 0, 0, 0.2);
 }
