--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,15 @@ h1 {
   left: 10px;
   box-shadow: inset 0 -20px 25px rgba(0, 0, 0, 0.2);
 }
+
+.lettuce {
+  width: 200px;
+  height: 40px;
+  background-color: #92d36e;
+  position: absolute;
+  top: 35px;
+  left: 30px;
+  border-radius: 50px;
+  transform: rotate(-8deg);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
