--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,14 @@ h1 {
   left: 40px;
   border-radius: 30px;
 }
+
+.cheese {
+  width: 160px;
+  height: 15px;
+  background: #ffd86d;
+  position: absolute;
+  top: 70px;
+  left: 50px;
+  border-radius: 20px;
+  transform: rotate(5deg);
+}
