--- a/styles.css
+++ b/styles.css
@@ -80,9 +80,7 @@ h1 {
 
 /* ----------- TACO ANIMATION SECTION ---------- */
 .animation-container {
-  /* display: flex;
-  justify-content: center; */
-  margin-top: 4rem;
+  margin: 10rem 0;
 }
 
 .taco {
@@ -101,6 +99,7 @@ h1 {
   bottom: 0;
   left: -10px;
   box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
 }
 
 .shell {
@@ -159,3 +158,25 @@ h1 {
     30px -16px 0 #e45454;
 }
 /* Box-shadow above creates 3 more 'tomatoes', separated by commas */
+
+/* -------- Further Learning Section -------- */
+.learn-more-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.learn-more-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.learn-more-text h2 {
+  font-size: 3rem;
+}
+.learn-more-text p {
+  font-size: 1rem;
+}
