--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ h1 {
 
 .taco {
   position: relative;
+  left: 100px;
   width: 260px;
   height: 180px;
   filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.4));
@@ -172,6 +173,10 @@ h1 {
   justify-content: center;
   align-items: center;
   color: white;
+}
+
+.learn-more-text {
+  margin-right: 2rem;
 }
 
 .learn-more-text h2 {
