--- a/styles.css
+++ b/styles.css
@@ -161,27 +161,32 @@ h1 {
 /* Box-shadow above creates 3 more 'tomatoes', separated by commas */
 
 /* -------- Further Learning Section -------- */
-.learn-more-section {
+.trivia-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   align-content: center;
 }
 
-.learn-more-container {
+.trivia-container {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
 }
 
-.learn-more-text {
+.trivia-text {
   margin-right: 2rem;
 }
 
-.learn-more-text h2 {
-  font-size: 3rem;
+.trivia-text h2 {
+  font-size: 4rem;
+  text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
 }
-.learn-more-text p {
-  font-size: 1rem;
+
+.trivia-text p {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 2rem;
+  text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.8);
 }
